--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -1736,184 +1736,7 @@ AggregationResults<TagCount> results = template.aggregate(aggregation, "tags", T
 
 WARNING: Indexes are only used if the collation used for the operation matches the index collation.
 
-[[mongo.jsonSchema]]
-=== JSON Schema
-
-As of version 3.6, MongoDB supports collections that validate documents against a provided https://docs.mongodb.com/manual/core/schema-validation/#json-schema[JSON Schema].
-The schema itself and both validation action and level can be defined when creating the collection, as the following example shows:
-
-.Sample JSON schema
-====
-[source,json]
-----
-{
-  "type": "object",                                                        <1>
-
-  "required": [ "firstname", "lastname" ],                                 <2>
-
-  "properties": {                                                          <3>
-
-    "firstname": {                                                         <4>
-      "type": "string",
-      "enum": [ "luke", "han" ]
-    },
-    "address": {                                                           <5>
-      "type": "object",
-      "properties": {
-        "postCode": { "type": "string", "minLength": 4, "maxLength": 5 }
-      }
-    }
-  }
-}
-----
-<1> JSON schema documents always describe a whole document from its root. A schema is a schema object itself that can contain
-embedded schema objects that describe properties and subdocuments.
-<2> `required` is a property that describes which properties are required in a document. It can be specified optionally, along with other
-schema constraints. See MongoDB's documentation on https://docs.mongodb.com/manual/reference/operator/query/jsonSchema/#available-keywords[available keywords].
-<3> `properties` is related to a schema object that describes an `object` type. It contains property-specific schema constraints.
-<4> `firstname` specifies constraints for the `firsname` field inside the document. Here, it is a string-based `properties` element declaring
- possible field values.
-<5> `address` is a subdocument defining a schema for values in its `postCode` field.
-====
-
-You can provide a schema either by specifying a schema document (that is, by using the `Document` API to parse or build a document object) or by building it with Spring Data's JSON schema utilities in `org.springframework.data.mongodb.core.schema`. `MongoJsonSchema` is the entry point for all JSON schema-related operations. The following example shows how use `MongoJsonSchema.builder()` to create a JSON schema:
-
-.Creating a JSON schema
-====
-[source,java]
-----
-MongoJsonSchema.builder()                                                  <1>
-    .required("firstname", "lastname")                                     <2>
-
-    .properties(
-                string("firstname").possibleValues("luke", "han"),         <3>
-
-                object("address")
-                     .properties(string("postCode").minLength(4).maxLength(5)))
-
-    .build();                                                              <4>
-----
-<1> Obtain a schema builder to configure the schema with a fluent API.
-<2> Configure required properties.
-<3> Configure the String-typed `firstname` field, allowing only `luke` and `han` values. Properties can be typed or untyped. Use a static import of  `JsonSchemaProperty` to make the syntax slightly more compact and to get entry points such as `string(…)`.
-<4> Build the schema object. Use the schema to create either a collection or <<mongodb-template-query.criteria,query documents>>.
-====
-
-There are already some predefined and strongly typed schema objects (`JsonSchemaObject` and `JsonSchemaProperty`) available
-through static methods on the gateway interfaces.
-However, you may need to build custom property validation rules, which can be created through the builder API, as the following example shows:
-
-[source,java]
-----
-// "birthdate" : { "bsonType": "date" }
-JsonSchemaProperty.named("birthdate").ofType(Type.dateType());
-
-// "birthdate" : { "bsonType": "date", "description", "Must be a date" }
-JsonSchemaProperty.named("birthdate").with(JsonSchemaObject.of(Type.dateType()).description("Must be a date"));
-----
-
-`CollectionOptions` provides the entry point to schema support for collections, as the following example shows:
-
-.Create collection with `$jsonSchema`
-====
-[source,java]
-----
-MongoJsonSchema schema = MongoJsonSchema.builder().required("firstname", "lastname").build();
-
-template.createCollection(Person.class, CollectionOptions.empty().schema(schema));
-----
-====
-
-You can use a schema to query any collection for documents that match a given structure defined by a JSON schema, as the following example shows:
-
-.Query for Documents matching a `$jsonSchema`
-====
-[source,java]
-----
-MongoJsonSchema schema = MongoJsonSchema.builder().required("firstname", "lastname").build();
-
-template.find(query(matchingDocumentStructure(schema)), Person.class);
-----
-====
-
-The following table shows the supported JSON schema types:
-
-[cols="3,1,6", options="header"]
-.Supported JSON schema types
-|===
-| Schema Type
-| Java Type
-| Schema Properties
-
-| `untyped`
-| -
-| `description`, generated `description`, `enum`, `allOf`, `anyOf`, `oneOf`, `not`
-
-| `object`
-| `Object`
-| `required`, `additionalProperties`, `properties`, `minProperties`, `maxProperties`, `patternProperties`
-
-| `array`
-| any array except `byte[]`
-| `uniqueItems`, `additionalItems`, `items`, `minItems`, `maxItems`
-
-| `string`
-| `String`
-| `minLength`, `maxLentgth`, `pattern`
-
-| `int`
-| `int`, `Integer`
-| `multipleOf`, `minimum`, `exclusiveMinimum`, `maximum`, `exclusiveMaximum`
-
-| `long`
-| `long`, `Long`
-| `multipleOf`, `minimum`, `exclusiveMinimum`, `maximum`, `exclusiveMaximum`
-
-| `double`
-| `float`, `Float`, `double`, `Double`
-| `multipleOf`, `minimum`, `exclusiveMinimum`, `maximum`, `exclusiveMaximum`
-
-| `decimal`
-| `BigDecimal`
-| `multipleOf`, `minimum`, `exclusiveMinimum`, `maximum`, `exclusiveMaximum`
-
-| `number`
-| `Number`
-| `multipleOf`, `minimum`, `exclusiveMinimum`, `maximum`, `exclusiveMaximum`
-
-| `binData`
-| `byte[]`
-| (none)
-
-| `boolean`
-| `boolean`, `Boolean`
-| (none)
-
-| `null`
-| `null`
-| (none)
-
-| `objectId`
-| `ObjectId`
-| (none)
-
-| `date`
-| `java.util.Date`
-| (none)
-
-| `timestamp`
-| `BsonTimestamp`
-| (none)
-
-| `regex`
-| `java.util.regex.Pattern`
-| (none)
-
-|===
-
-NOTE: `untyped` is a generic type that is inherited by all typed schema types. It provides all `untyped` schema properties to typed schema types.
-
-For more information, see https://docs.mongodb.com/manual/reference/operator/query/jsonSchema/#op._S_jsonSchema[$jsonSchema].
+include::./mongo-json-schema.adoc[leveloffset=+1]
 
 [[mongo.query.fluent-template-api]]
 === Fluent Template API
@@ -2930,105 +2753,7 @@ TypedAggregation<Book> agg = Aggregation.newAggregation(Book.class,
 <4> Otherwise, add the field value of `author.middle`.
 ====
 
-[[mongo.custom-converters]]
-== Overriding Default Mapping with Custom Converters
-
-To have more fine-grained control over the mapping process, you can register Spring converters with the `MongoConverter` implementations, such as the `MappingMongoConverter`.
-
-The `MappingMongoConverter` checks to see if any Spring converters can handle a specific class before attempting to map the object itself. To 'hijack' the normal mapping strategies of the `MappingMongoConverter`, perhaps for increased performance or other custom mapping needs, you first need to create an implementation of the Spring `Converter` interface and then register it with the `MappingConverter`.
-
-NOTE: For more information on the Spring type conversion service, see the reference docs https://docs.spring.io/spring/docs/{springVersion}/spring-framework-reference/core.html#validation[here].
-
-[[mongo.custom-converters.writer]]
-=== Saving by Using a Registered Spring Converter
-
-The following example shows an implementation of the `Converter` that converts from a `Person` object to a `org.bson.Document`:
-
-[source,java]
-----
-import org.springframework.core.convert.converter.Converter;
-
-import org.bson.Document;
-
-public class PersonWriteConverter implements Converter<Person, Document> {
-
-  public Document convert(Person source) {
-    Document document = new Document();
-    document.put("_id", source.getId());
-    document.put("name", source.getFirstName());
-    document.put("age", source.getAge());
-    return document;
-  }
-}
-----
-
-[[mongo.custom-converters.reader]]
-=== Reading by Using a Spring Converter
-
-The following example shows an implementation of a `Converter` that converts from a `Document` to a `Person` object:
-
-[source,java]
-----
-public class PersonReadConverter implements Converter<Document, Person> {
-
-  public Person convert(Document source) {
-    Person p = new Person((ObjectId) source.get("_id"), (String) source.get("name"));
-    p.setAge((Integer) source.get("age"));
-    return p;
-  }
-}
-----
-
-[[mongo.custom-converters.xml]]
-=== Registering Spring Converters with the `MongoConverter`
-
-The Mongo Spring namespace provides a convenient way to register Spring `Converter` instances with the `MappingMongoConverter`. The following configuration snippet shows how to manually register converter beans as well as configure the wrapping `MappingMongoConverter` into a `MongoTemplate`:
-
-[source,xml]
-----
-<mongo:db-factory dbname="database"/>
-
-<mongo:mapping-converter>
-  <mongo:custom-converters>
-    <mongo:converter ref="readConverter"/>
-    <mongo:converter>
-      <bean class="org.springframework.data.mongodb.test.PersonWriteConverter"/>
-    </mongo:converter>
-  </mongo:custom-converters>
-</mongo:mapping-converter>
-
-<bean id="readConverter" class="org.springframework.data.mongodb.test.PersonReadConverter"/>
-
-<bean id="mongoTemplate" class="org.springframework.data.mongodb.core.MongoTemplate">
-  <constructor-arg name="mongoDbFactory" ref="mongoDbFactory"/>
-  <constructor-arg name="mongoConverter" ref="mappingConverter"/>
-</bean>
-----
-
-You can also use the `base-package` attribute of the `custom-converters` element to enable classpath scanning for all `Converter` and `GenericConverter` implementations below the given package, as the following example shows:
-
-[source,xml]
-----
-<mongo:mapping-converter>
-  <mongo:custom-converters base-package="com.acme.**.converters" />
-</mongo:mapping-converter>
-----
-
-[[mongo.converter-disambiguation]]
-=== Converter Disambiguation
-
-Generally, we inspect the `Converter` implementations for the source and target types they convert from and to. Depending on whether one of those is a type MongoDB can handle natively, we register the converter instance as a reading or a writing converter. The following examples show a writer converter and a read converter (note the difference is in the order of the qualifiers on `Converter`):
-
-[source,java]
-----
-// Write converter as only the target type is one Mongo can handle natively
-class MyConverter implements Converter<Person, String> { … }
-
-// Read converter as only the source type is one Mongo can handle natively
-class MyConverter implements Converter<String, Person> { … }
-----
-
-If you write a `Converter` whose source and target type are native Mongo types, we cannot determine whether we should consider it as a reading or a writing converter. Registering the converter instance as both might lead to unwanted results. For example, a `Converter<String, Long>` is ambiguous, although it probably does not make sense to try to convert all `String` instances into `Long` instances when writing. To let you force the infrastructure to register a converter for only one way, we provide `@ReadingConverter` and `@WritingConverter` annotations to be used in the converter implementation.
+include::mongo-custom-conversions.adoc[leveloffset=+1]
 
 [[mongo-template.index-and-collections]]
 == Index and Collection Management
