--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 1.10.20.RELEASE (2019-04-01)
+-----------------------------------------------
+* DATAMONGO-2243 - Release 1.10.20 (Ingalls SR20).
+
+
 Changes in version 1.10.19.RELEASE (2019-04-01)
 -----------------------------------------------
 * DATAMONGO-2185 - Release 1.10.19 (Ingalls SR19).
