DATAMONGO-1849 - Add conversion target type hint to Field annotation.
By using Field#targetType it is now possible to pass down a type hint to the conversion subsystem. This allows specifying the desired target type for a property so that eg. a plain String can be stored as Code.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -12,6 +12,7 @@
 * Support `Range<T>` in repository between queries.
 * Kotlin extension methods accepting `KClass` are deprecated now in favor of `reified` methods.
 * Support of array filters in `Update` operations.
+* <<mongo.jsonSchema.generated, Json Schema generation>> from domain types.
 
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
