--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,27 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.2.0.M3 (2019-04-11)
+----------------------------------------
+* DATAMONGO-2255 - Add Coroutines Flow extensions.
+* DATAMONGO-2254 - Upgrade MongoDB Java driver to 3.10.2.
+* DATAMONGO-2248 - Remove cross-store module.
+* DATAMONGO-2247 - Add non-nullable variants to Coroutines extensions.
+* DATAMONGO-2241 - Memory leak in ClassGeneratingPropertyAccessorFactory when using MongoDB sessions.
+* DATAMONGO-2230 - Reading files from reactive GridFS hangs after a few chunks.
+* DATAMONGO-2228 - MongodbDocumentSerializer cuts off branches with same Ops in handling Ops.AND.
+* DATAMONGO-2227 - Move off deprecations in Spring Data Commons.
+* DATAMONGO-2225 - Potential bug in MongoExampleMapper.
+* DATAMONGO-2224 - Add trace logging for DBRef resolution.
+* DATAMONGO-2223 - Add missing tests for DBRef resolution in different database.
+* DATAMONGO-2222 - Release 2.2 M3 (Moore).
+* DATAMONGO-2221 - Query on nested id field incorrectly returns no results.
+* DATAMONGO-2218 - Add support for ReplaceOne operation in BulkOperations.
+* DATAMONGO-2112 - Add support for SpEL expression in @Indexed.
+* DATAMONGO-1849 - Generate $jsonSchema out of domain type meta information.
+* DATAMONGO-1783 - Apply Query.skip/limit options to CountOptions.
+
+
 Changes in version 2.1.6.RELEASE (2019-04-01)
 ---------------------------------------------
 * DATAMONGO-2241 - Memory leak in ClassGeneratingPropertyAccessorFactory when using MongoDB sessions.
