DATAMONGO-2264 - Support upcoming MongoDB 4.2 Server.
Deprecate and guard tests for removed commands:
    - eval
    - group
    - maxScan
    - geoNear

Transition from removed geoNear command to $geoNear aggregation pipeline stage.
This allows users to still use NearQuery along with the template that now transforms the query into a GeoNearOperation applying skip (previously in memory skipping) and limit (previous num parameter) as additional aggregation pipeline stages.

Tested against:
    - 4.1.10
    - 4.0.4
    - 3.6.12
    - 4.4.20

Original pull request: #744.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -3,6 +3,7 @@
 
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
+* Compatible with MongoDB 4.2.
 * <<mongo.query.kotlin-support,Type-safe Queries for Kotlin>>
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
 * <<reactive.gridfs,Reactive GridFS support>>.
