--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -16,6 +16,7 @@
 * <<mongo.jsonSchema.generated, JSON Schema generation>> from domain types.
 * SpEL support in for expressions in `@Indexed`.
 * Annotation-based Collation support through `@Document` and `@Query`.
+* <<mongodb.repositories.queries.aggregation, Aggregation framework>> support via repository query methods.
 
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
