--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -3,7 +3,7 @@
 
 [[new-features.2-2-0]]
 == What's New in Spring Data MongoDB 2.2
-* Compatible with MongoDB 4.2.
+* Compatibility with MongoDB 4.2 deprecating `eval`, `group` and `geoNear` Template API methods.
 * <<mongo.query.kotlin-support,Type-safe Queries for Kotlin>>
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
 * <<reactive.gridfs,Reactive GridFS support>>.
