--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.8.RELEASE (2019-05-13)
+---------------------------------------------
+* DATAMONGO-2269 - Release 2.1.8 (Lovelace SR8).
+
+
 Changes in version 2.2.0.M4 (2019-05-13)
 ----------------------------------------
 * DATAMONGO-2268 - Upgrade to MongoDB Java Driver 3.11.0-beta3.
