--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 1.10.22.RELEASE (2019-05-13)
+-----------------------------------------------
+* DATAMONGO-2270 - Release 1.10.22 (Ingalls SR22).
+
+
 Changes in version 2.1.8.RELEASE (2019-05-13)
 ---------------------------------------------
 * DATAMONGO-2269 - Release 2.1.8 (Lovelace SR8).
