DATAMONGO-2231 - URL Cleanup.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -70,7 +70,7 @@
 * Assert compatibility with MongoDB 3.0 and MongoDB Java Driver 3-beta3 (see: <<mongo.mongo-3>>).
 * Support JSR-310 and ThreeTen back-port date/time types.
 * Allow `Stream` as a query method return type (see: <<mongodb.repositories.queries>>).
-* http://geojson.org/[GeoJSON] support in both domain types and queries (see: <<mongo.geo-json>>).
+* https://geojson.org/[GeoJSON] support in both domain types and queries (see: <<mongo.geo-json>>).
 * `QueryDslPredicateExcecutor` now supports `findAll(OrderSpecifier<?>… orders)`.
 * Support calling JavaScript functions with <<mongo.server-side-scripts>>.
 * Improve support for `CONTAINS` keyword on collection-like properties.
