--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.9.RELEASE (2019-06-14)
+---------------------------------------------
+* DATAMONGO-2293 - EntityOperations.populateIdIfNecessary nulls entire entity when just the id is null.
+* DATAMONGO-2288 - Fix wrong indentation on documentation code sample.
+* DATAMONGO-2278 - Update Querydsl package names in MongoAnnotationProcessor.
+* DATAMONGO-2275 - NPE when in QueryMapper for MongoJsonSchema when domain type is Document.
+* DATAMONGO-2271 - Release 2.1.9 (Lovelace SR9).
+* DATAMONGO-2267 - Property population resolves collection name via SpEL multiple times.
+* DATAMONGO-2252 - getCollection(collectionName) does not create collection when expected (api description mismatch).
+
+
 Changes in version 1.10.22.RELEASE (2019-05-13)
 -----------------------------------------------
 * DATAMONGO-2270 - Release 1.10.22 (Ingalls SR22).
